--- a/host/frontend/operator/webui/angular.json
+++ b/host/frontend/operator/webui/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/webui",
+            "outputPath": "dist/static",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
