--- a/.github/workflows/test_build_deb.yaml
+++ b/.github/workflows/test_build_deb.yaml
@@ -9,14 +9,12 @@ jobs:
       # don't forget to also update debs-builder-docker/Dockerfile.debbld when updating this base image
       image: debian@sha256:6a8bad8d20e1ca5ecbb7a314e51df6fca73fcce19af2778550671bdd1cbe7b43 # aka stable-20211011
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
     - name: setup apt
       run: apt update -y && apt upgrade -y
+    - name: setup nodejs
+      run: apt install -y curl && curl -s https://deb.nodesource.com/setup_16.x | bash
     - name: install debuild dependencies
-      run: apt install -y git devscripts config-package-dev debhelper-compat golang
+      run: apt install -y git devscripts config-package-dev debhelper-compat golang nodejs
     - name: checkout repository
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
