--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -8,14 +8,12 @@ jobs:
     container:
       image: ubuntu:jammy-20220531 # Ubuntu 22.04
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
     - name: setup apt
       run: apt update -y && apt upgrade -y
+    - name: setup nodejs
+      run: apt install -y curl && curl -s https://deb.nodesource.com/setup_16.x | bash
     - name: install debuild dependencies
-      run: apt install -y git devscripts config-package-dev debhelper-compat golang-1.13
+      run: apt install -y git devscripts config-package-dev debhelper-compat golang-1.13 nodejs
     - name: checkout repository
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
